Minor spacing fix

--- a/src/Components/GenerateEpisode/ShowDetails.css
+++ b/src/Components/GenerateEpisode/ShowDetails.css
@@ -81,7 +81,7 @@
 
 .show-details-visuals {
     display: flex;
-    margin-bottom: 20px;
+    margin: 20px 0px;
 }
 
 .show-details-status {
